Add vm.opt.final.ZGenerational to JFR event tests